# local-manus

./: README.md
react/: vite.config.ts
react/src/: App.tsx  PostEditor.tsx  Settings.tsx
server/: main.py  pyproject.toml
