[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosqlite>=0.21.0",
    "anthropic>=0.75.0",
    "fastapi>=0.122.0",
    "gunicorn>=23.0.0",
    "mcp>=1.22.0",
    "ollama>=0.6.1",
    "openai>=2.8.1",
    "pyinstaller>=6.17.0",
    "requests>=2.32.5",
    "toml>=0.10.2",
    "uvicorn[standard]>=0.38.0",
]
